# quack

./: .clang-format  .gitignore  .unifyignore  CMakeLists.txt  README.md
assets/: autumn_geo.glb  fox_geo.glb
include/quack/: qkBlock.h  qkCamera.h  qkConstants.h  qkDebug.h  qkModel.h  qkPerformance.h  qkRenderer.h  qkSpanBuffer.h  qkTexture.h  qkTriangleBatch.h  renderer.h
include/quack/block/: qkBlock.h  qkSpanBlock.h  qkTriangleBlock.h
include/quack/buffer/: qkBuffer.h  qkSpanBuffer.h  qkVertexBuffer.h
include/quack/math/: qkVec3.h  vec3.h
src/: main.c  main.cpp  qkBlock.c  qkCamera.c  qkCamera.cpp  qkModel.c  qkModel.cpp  qkPerformance.c  qkRenderer.c  qkRenderer.cpp  qkSpanBuffer.c  qkTexture.c  qkTexture.cpp  qkTriangleBatch.c  renderer.cpp
src/block/: qkBlock.c  qkSpanBlock.c  qkTriangleBlock.c
src/buffer/: qkBuffer.c  qkSpanBuffer.c  qkVertexBuffer.c
src/math/: qkVec3.c  qkVec3.cpp  vec3.cpp
tools/: copy_assets.py
